--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "type": "module",
+  "main": "index.js",
   "scripts": {
     "dev": " nodemon src/index.js"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
